[tool.poetry]
name = "openbb-energy"
version = "0.1.0"
description = ""
authors = ["Super Quant <super@duper.quant>"]
readme = "README.md"
packages = [{ include = "openbb_energy" }]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
openbb-core = "^1.1.0"

[tool.poetry.group.dev.dependencies]
openbb-devtools = "^1.0.0"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
eia = "openbb_energy.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
eia = "openbb_energy.eia_provider:provider"
